# CS444_A3_Dumble_Dash

./: .gitignore  README.md
a3_dumble_dash/: README.md  docker-compose.yml  pyproject.toml
a3_dumble_dash/output/: main.js
a3_dumble_dash/output/src/scenes/: BootScene.js  OverworldScene.js
a3_dumble_dash/output/src/utils/: audio.js  battle.js  maze.js  ui.js
a3_dumble_dash/src/a3_dumble_dash/: crew.py  main.py
a3_dumble_dash/src/a3_dumble_dash/config/: agents.yaml  tasks.yaml
cs444/: pyvenv.cfg
cs444/Scripts/: activate  activate.bat  dumppdf.py  jsondiff  jsonpatch  jsonpointer  pdf2txt.py
cs444_genai_class/src/cs444_genai_class/: crew.py
cs444_genai_class/src/cs444_genai_class/config/: agents.yaml  tasks.yaml
cs444_genai_class_flow/: .gitignore  README.md  pyproject.toml
cs444_genai_class_flow/ElvenBlight/: README.md  index.html
cs444_genai_class_flow/ElvenBlight/src/scenes/: BootScene.js  BossScene.js  OverworldScene.js
cs444_genai_class_flow/ElvenBlight/src/utils/: audio.js  ui.js
cs444_genai_class_flow/ReefEscape/: README.md  index.html  index_OLD.html  main.js  main_OLD.js
cs444_genai_class_flow/ReefEscape/src/scenes/: BootScene.js  BossScene.js  OverworldScene.js
cs444_genai_class_flow/ReefEscape/src/utils/: battle.js  maze.js  ui.js
cs444_genai_class_flow/outputs/: BUILD_INSTRUCTIONS.txt  asset_mapping.json  audio.js  audio_dg.js  final_bundle.js  gameplay_logic.js  gameplay_logic_dg.js  index.html  index_dg.html  main.js  main_dg.js  scenes.html  scenes.js  scenes_dg.js  style.css  style_dg.css  ui.html  ui.js  ui_dg.js
cs444_genai_class_flow/src/cs444_genai_class_flow/: main.py
cs444_genai_class_flow/src/cs444_genai_class_flow/crews/crew1/: crew.py  pyproject.toml
cs444_genai_class_flow/src/cs444_genai_class_flow/crews/crew1/config/: tasks.yaml
cs444_genai_class_flow/src/cs444_genai_class_flow/crews/crew1/src/crew1/: crew.py  main.py
cs444_genai_class_flow/src/cs444_genai_class_flow/crews/crew1/src/crew1/config/: agents.yaml  tasks.yaml
cs444_genai_class_flow/src/cs444_genai_class_flow/crews/crew2/: crew.py  pyproject.toml
cs444_genai_class_flow/src/cs444_genai_class_flow/crews/crew2/config/: agents.yaml  tasks.yaml
cs444_genai_class_flow/src/cs444_genai_class_flow/crews/crew2/outputs/: asset_mapping.json
cs444_genai_class_flow/src/cs444_genai_class_flow/crews/crew2/src/crew2/: crew.py  main.py
cs444_genai_class_flow/src/cs444_genai_class_flow/crews/crew2/src/crew2/callbacks/: dalle_callback.py
cs444_genai_class_flow/src/cs444_genai_class_flow/crews/crew2/src/crew2/config/: agents.yaml  tasks.yaml
cs444_genai_class_flow/src/cs444_genai_class_flow/crews/crew2/src/crew2/tools/: custom_tool.py  freesound_audio_tool.py  music_tool.py  prompts.py  sound_search.py
cs444_genai_class_flow/src/cs444_genai_class_flow/crews/crew3/: README.md  crew.py  pyproject.toml  requirements.txt
cs444_genai_class_flow/src/cs444_genai_class_flow/crews/crew3/config/: agents.yaml  tasks.yaml
cs444_genai_class_flow/src/cs444_genai_class_flow/crews/crew3/output/: BUILD_INSTRUCTIONS.txt  audio.js  final_bundle.js  gameplay_logic.js  index.html  main.js  scenes.js  style.css  ui.js
cs444_genai_class_flow/src/cs444_genai_class_flow/crews/crew3/src/crew3/: crew.py  main.py
cs444_genai_class_flow/src/cs444_genai_class_flow/crews/crew3/src/crew3/config/: agents.yaml  tasks.yaml
cs444_genai_class_flow/src/cs444_genai_class_flow/crews/crew3/src/crew3/tools/: audio_mapper.py  javascript_generator.py
cs444_genai_class_flow/src/cs444_genai_class_flow/crews/cs444_genai_class/: README.md  pyproject.toml
cs444_genai_class_flow/src/cs444_genai_class_flow/crews/cs444_genai_class/src/cs444_genai_class/: crew.py  main.py
cs444_genai_class_flow/src/cs444_genai_class_flow/crews/cs444_genai_class/src/cs444_genai_class/config/: agents.yaml  tasks.yaml
cs444_genai_class_flow/src/cs444_genai_class_flow/output/: BUILD_INSTRUCTIONS.txt  audio.js  final_bundle.js  gameplay_logic.js  index.html  main.js  scenes.js  style.css  ui.js
cs444_genai_class_flow/src/cs444_genai_class_flow/outputs/: BUILD_INSTRUCTIONS.txt  asset_mapping.json  audio.js  final_bundle.js  gameplay_logic.js  index.html  main.js  scenes.js  style.css  ui.js
cs444_genai_class_flow/src/cs444_genai_class_flow/tools/: audio_mapper.py  dalle_callback.py  dalle_image_tool.py  freesound_audio_tool.py  javascript_generator.py  prompts.py  sound_search.py
dumble_dash/: README.md  pacman_game.html  pyproject.toml
dumble_dash/knowledge/: user_preference.txt
dumble_dash/src/dumble_dash/: crew.py  main.py  model_provider.py  test.py
dumble_dash/src/dumble_dash/config/: agents.yaml  tasks.yaml
dumble_dash_v2/: .gitignore  README.md  debug_report.txt  index.html  pyproject.toml  report.md
dumble_dash_v2/output/: index.html
dumble_dash_v2/output/js/: game.js  game_enemies.js
dumble_dash_v2/src/dumble_dash_v2/: crew.py  main.py
dumble_dash_v2/src/dumble_dash_v2/config/: agents.yaml  tasks.yaml
dumble_dash_v2/templates/: index.html
dumble_dash_v2/templates/js/: game.js
(+1 files in other folders)
