[project]
name = "a3_dumble_dash"
version = "0.1.0"
description = "a3_dumble_dash using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "==3.11.9"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
a3_dumble_dash = "a3_dumble_dash.main:run"
run_crew = "a3_dumble_dash.main:run"
train = "a3_dumble_dash.main:train"
replay = "a3_dumble_dash.main:replay"
test = "a3_dumble_dash.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
