[project]
name = "cs444_genai_class_flow"
version = "0.1.0"
description = "cs444_genai_class_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
]

[project.scripts]
kickoff = "cs444_genai_class_flow.main:kickoff"
plot = "cs444_genai_class_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
